--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,12 @@ cmake_minimum_required(VERSION 3.7)
 project(HW2)
 
 set(CMAKE_CXX_STANDARD 11)
+FIND_PACKAGE(Boost REQUIRED)
+
+find_package(Boost COMPONENTS filesystem REQUIRED)
+
+include_directories(${Boost_INCLUDE_DIRS})
+
 
 set(SOURCE_FILES
         Main.cpp
@@ -16,3 +22,6 @@ set(SOURCE_FILES
         TestResult.h)
 
 add_executable(HW2 ${SOURCE_FILES})
+
+target_link_libraries(HW2
+        ${Boost_FILESYSTEM_LIBRARY})
