--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,8 @@
 cmake_minimum_required(VERSION 3.7)
-project(HW2)
+project(StlVect)
 
 set(CMAKE_CXX_STANDARD 11)
 FIND_PACKAGE(Boost REQUIRED)
-
-find_package(Boost COMPONENTS filesystem REQUIRED)
 
 include_directories(${Boost_INCLUDE_DIRS})
 
@@ -19,9 +17,9 @@ set(SOURCE_FILES
         TestRegistry.cpp
         TestRegistry.h
         TestResult.cpp
-        TestResult.h)
+        TestResult.h Student.cpp Student.h)
 
-add_executable(HW2 ${SOURCE_FILES})
+add_executable(StlVect ${SOURCE_FILES})
 
-target_link_libraries(HW2
+target_link_libraries(StlVect
         ${Boost_FILESYSTEM_LIBRARY})
